feat(engine): handle double in yaml process executor